removed loggers.